--- a/style.css
+++ b/style.css
@@ -17,5 +17,9 @@
     background-color: #e84949;
     width: fit-content;
     color: white;
+    padding: 0.8rem 2.3rem;
+    box-shadow: 5px 5px 7px 0px #0000003f;
+    font-size: 18px;
+    cursor: pointer;
   }
 
