--- a/style.css
+++ b/style.css
@@ -21,5 +21,10 @@
     box-shadow: 5px 5px 7px 0px #0000003f;
     font-size: 18px;
     cursor: pointer;
+    transition: all 0.5s;
+    font-weight: 500;
+    position: relative;
+    z-index: 1;
+    border: none;
   }
 
