--- a/style.css
+++ b/style.css
@@ -32,5 +32,10 @@
     content: "";
     position: absolute;
     background-color: #1f1f1f;
-
+    top: 0;
+    left : 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+;
   }
