--- a/style.css
+++ b/style.css
@@ -37,5 +37,7 @@
     right: 0;
     bottom: 0;
     z-index: -1;
-;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: all 0.8s;
   }
